--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
   </div>
 </div>
 <!-- ===== END OF: Pricing 01-->
-<!-- START OF: Testimonials 01 =====-->
+<!-- START OF: Testimonials 01 =====
 <div class="testimonials-01">
   <div class="container container--small">
     <div class="title-box title-box--center">
