--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </li>
                 <li class="nav-01__item"><a class="button   button--white-outline  button--empty " href="javascript:void(0);" target="_blank"><span>FAQs</span></a>
                 </li>
-                <li class="nav-01__item"><a class="button   button--white-outline  button--empty " href="javascript:void(0);" target="https://aisutd.org/"><span>Contact Us</span></a>
+                <li class="nav-01__item"><a class="button   button--white-outline  button--empty " href="https://aisutd.org/" target="_blank"><span>Contact Us</span></a>
                 </li>
                 <li class="nav-01__item"><a class="button   button--white-outline " href="javascript:void(0);" target="_blank"><span>Sign Up</span></a>
                 </li>
