--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="container container--mid header-04__container">
         <div class="header-04__card header-04__card--top">
           <div class="header-04__card_content">
-            <h1 class="heading heading--accent header-04__heading white-text">HackAI 2019</h1>
+            <h1 class="heading heading--accent header-04__heading white-text big-text">HackAI 2019</h1>
             <p class="header-04__text white-text">HackAI is UT Dallas's premier Artificial Intelligence hackathon.</p>
             <div class="header-04__buttons buttons-set">
               <ul class="buttons-set__list">
@@ -74,7 +74,7 @@
             <div class="logos">
               <ul class="logos__list">
                 <!--Please specify the height of each logo manually.-->
-                <li class="logos__item"><img class="logos__img" src="img/logos/press/white/tech-crunch.svg" alt="Tech Crunch logo" height="25"/></li>
+                <li class="logos__item"><img class="logos__img" src="http://www.logospng.com/images/167/homecoming-the-university-of-texas-at-dallas-167695.png" alt="UTD logo" height="40"/></li>
                 <li class="logos__item"><img class="logos__img" src="img/logos/press/white/forbes.svg" alt="Forbes logo" height="30"/></li>
                 <li class="logos__item"><img class="logos__img" src="img/logos/press/white/ycombinator.svg" alt="YC logo" height="30"/></li>
                 <li class="logos__item"><img class="logos__img" src="img/logos/press/white/lifehacker.svg" alt="Lifehacker logo" height="30"/></li>
