--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <!-- START OF: Text 04 =====-->
 <div class="text--04">
   <div class="container container--mid">
-    <div class="text--04__big_text">With herrings drink salsa verde<img class="emoji  " src="img/emoji/lightning.png" alt="Emoji"/>Per guest prepare half a kilo of potato with roasted walnut for dessert.
+    <div class="text--04__big_text"><img class="emoji  " src="img/emoji/lightning.png" alt="Emoji"/>Welcome to the biggest AI Hackathon in North Texas.<img class="emoji  " src="img/emoji/lightning.png" alt="Emoji"/>
     </div>
   </div>
 </div>
