--- a/index.html
+++ b/index.html
@@ -231,10 +231,22 @@
 <div class="testimonials-01">
   <div class="container container--small">
     <div class="title-box title-box--center">
-      <h2 class="heading">What People Say</h2>
-      <p class="title-box__text">Grey, aged pudding is best marinated with sweet hollanders sauce.</p>
+      <h2 class="heading">Want to get in touch or learn more?</h2>
+      <p class="title-box__text">Please check out the official website for Artificial Intelligence Society at UTD!</p>
     </div>
   </div>
+  <div class="header-04__buttons buttons-set">
+    <ul class="buttons-set__list">
+      <!--Extra Button
+      <li class="buttons-set__item"><a class="button   button--alt-accent-bg " href="javascript:void(0);" target="_blank"><span>AIS Website</span></a>
+      </li>-->
+      <li class="buttons-set__item">
+        <button class="button js-scroll-down button--white-bg " type="button"><span class="button__text">Learn More</span>
+        </button>
+      </li>
+    </ul>
+  </div>
+  <!-- Testimonial Banner (not really needed?)
   <div class="testimonials-01__container container">
     <div class="slider">
       <div class="slider__arrow slider__arrow--prev">
@@ -266,7 +278,7 @@
         </li>
       </ul>
     </div>
-  </div>
+  </div>-->
 </div>
 <!-- ===== END OF: Testimonials 01-->
 <!-- START OF: Footer 01 =====-->
