--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
   </div>
 </div>
 <!-- ===== END OF: Pricing 01-->
-<!-- START OF: Testimonials 01 =====-->
-<div class="testimonials-01">
+<!-- START OF: Contact 01 =====-->
+<div class="contact-01" style="background-color:lightblue">
   <div class="container container--small">
     <div class="title-box title-box--center">
       <h2 class="heading">Want to get in touch or learn more?</h2>
