--- a/index.html
+++ b/index.html
@@ -286,17 +286,18 @@
   <div class="container">
     <div class="footer-01__wrapper"><a class="footer-01__logo_link" href="javascript:void(0);"><img class="footer-01__logo" src="img/other/logo.svg"/></a>
       <ul class="footer-01__list">
-        <li class="footer-01__item"><a class="footer-01__link" href="javascript:void(0);" target="_blank">hi@unicornplatform.com</a></li>
+        <li class="footer-01__item"><a class="footer-01__link" href="javascript:void(0);" target="_blank">contact@aisutd.org</a></li>
       </ul>
+      <!-- Additional Internal Links
       <ul class="footer-01__list">
-        <li class="footer-01__item"><a class="footer-01__link footer-01__link--black" href="javascript:void(0);" target="_blank">Sing Up</a></li>
+        <li class="footer-01__item"><a class="footer-01__link footer-01__link--black" href="javascript:void(0);" target="_blank">Sign Up</a></li>
         <li class="footer-01__item"><a class="footer-01__link footer-01__link--black" href="javascript:void(0);" target="_blank">F.A.Q.</a></li>
         <li class="footer-01__item"><a class="footer-01__link footer-01__link--black" href="javascript:void(0);" target="_blank">About</a></li>
-      </ul>
+      </ul>-->
       <ul class="footer-01__list">
-        <li class="footer-01__item"><a class="footer-01__link footer-01__link--black" href="https://twitter.com/unicornplatform" target="_blank">Twitter</a></li>
-        <li class="footer-01__item"><a class="footer-01__link footer-01__link--black" href="https://fb.com/unicornplatform" target="_blank">Facebook</a></li>
-        <li class="footer-01__item"><a class="footer-01__link footer-01__link--black" href="https://www.instagram.com/unicornplatform/" target="_blank">Instagram</a></li>
+        <li class="footer-01__item"><a class="footer-01__link footer-01__link--black" href="https://twitter.com/ais_utd" target="_blank">Twitter</a></li>
+        <li class="footer-01__item"><a class="footer-01__link footer-01__link--black" href="https://www.facebook.com/groups/1551548501821102/" target="_blank">Facebook</a></li>
+        <li class="footer-01__item"><a class="footer-01__link footer-01__link--black" href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="_blank">Code of Conduct</a></li>
       </ul>
     </div>
   </div>
